# SystemIntegration

./: .gitignore  package-lock.json
01._Data_Files/: me.csv  me.json  me.txt  me.xml  me.yaml
01._Data_Files/DataFormatApi/: DataFormatApi.csproj  DataFormatApi.sln
01._Data_Files/DataFormatApi/Controllers/: FileFormatsController.cs
01._Data_Files/DataFormatApi/DTOs/: PersonDTO.cs
01._Data_Files/DataFormatApi/Properties/: launchSettings.json
01._Data_Files/DataFormatApiServerB/: main.py  pyproject.toml  reader.py
01._Data_Files/FileBonanzaCSharp/: FileBonanzaCSharp.sln
01._Data_Files/FileBonanzaCSharp/FileBonanzaCSharp/: FileBonanzaCSharp.csproj  Parser.cs  Person.cs  Program.cs
01._Data_Files/FileBonanzaPython/: main.py  pyproject.toml
03._Encoding_Decoding/node/: index.js
03._Encoding_Decoding/python/: main.py
04._Python_Environments/: main.py
04._Python_Environments/03._Poetry_Environment/: pyproject.toml
05._Servers/node/: app.js
05._Servers/node_test/: app.js  package-lock.json
05._Servers/python/: main.py  pyproject.toml
06._Server-To-Server/node/: app.js
06._Server-To-Server/python/: main.py  pyproject.toml
07._Environment_Variables/node/: package.json
07._Environment_Variables/python/: main.py  pyproject.toml
13._Server-sent_Events/node/: app.js  package-lock.json
13._Server-sent_Events/node/public/: index.html
13._Server-sent_Events/python-sse/: main.py  pyproject.toml
15._Webhooks/node-webhooks/: app.js
15._Webhooks/python-webhooks/: main.py  pyproject.toml
