[tool.poetry]
name = "filebonanzapython"
version = "0.1.0"
description = ""
authors = ["Bressendorff <95355589+Bressendorff@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyyaml = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
