[tool.poetry]
name = "03-poetry-environment"
version = "0.1.0"
description = ""
authors = ["Bressendorff <95355589+Bressendorff@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "03"}]

[tool.poetry.dependencies]
python = "^3.12"
emoji = "^2.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
