[tool.poetry]
name = "first-server"
version = "0.1.0"
description = "First server in SI"
authors = ["Bressendorff <95355589+Bressendorff@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.27.1"
fastapi = "^0.109.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
